# special-enigma

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 15ed4325f8e4_initial_schema.py  6b4c5f98b960_initial_schema.py
docs/superpowers/plans/: 2026-05-02-gitlab-notifier.md
docs/superpowers/specs/: 2026-05-02-gitlab-notifier-design.md
src/gitlab_notifier/: app.py  config.py
src/gitlab_notifier/bot/: admin.py  handlers.py  subscriptions.py
src/gitlab_notifier/db/: models.py  session.py
src/gitlab_notifier/gitlab/: client.py
src/gitlab_notifier/notifier/: dispatcher.py  events.py  formatter.py  notification.py
src/gitlab_notifier/security/: crypto.py
src/gitlab_notifier/webhook/: parsers.py  server.py
tests/: test_config.py  test_crypto.py  test_dispatcher.py  test_events.py  test_formatter.py  test_gitlab_client.py  test_handlers_admin.py  test_handlers_user.py  test_models.py  test_notification.py  test_parsers.py  test_webhook_server.py
tests/fixtures/gitlab/: issue_open.json  mr_approved.json  mr_merge.json  mr_open.json  mr_update.json  note_commit.json  note_mr.json  pipeline_failed.json  pipeline_success.json  push.json  tag_push.json
